# tidy3d

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pylintrc.orig  .readthedocs.yaml  8ChannelDemultiplexer.ipynb  90BendPolarizationSplitterRotator.ipynb  90OpticalHybrid.ipynb  AdiabaticCouplerLN.ipynb  AdjointPlugin0Quickstart.ipynb  AdjointPlugin10YBranchLevelSet.ipynb  AdjointPlugin11CircuitMZI.ipynb  AdjointPlugin12LightExtractor.ipynb  AdjointPlugin13Metasurface.ipynb  AdjointPlugin14PreFab.ipynb  AdjointPlugin1Intro.ipynb  AdjointPlugin2GradientChecking.ipynb  AdjointPlugin3InverseDesign.ipynb  AdjointPlugin4MultiObjective.ipynb  AdjointPlugin5BoundaryGradients.ipynb  AdjointPlugin6GratingCoupler.ipynb  AdjointPlugin6GratingCouplerPreFab.ipynb  AdjointPlugin7Metalens.ipynb  AdjointPlugin8WaveguideBend.ipynb  AllDielectricStructuralColor.ipynb  AnimationTutorial.ipynb  App.ipynb  AutoGrid.ipynb  Bandstructure.ipynb  BilayerSiNEdgeCoupler.ipynb  BilevelPSR.ipynb  BistablePCCavity.ipynb  BoundaryConditions.ipynb  BraggGratings.ipynb  BroadbandDirectionalCoupler.ipynb  BullseyeCavityPSO.ipynb  CHANGELOG.md  (+157 more)
.binder/: requirements.txt
.github/ISSUE_TEMPLATE/: autograd_bug.md  feature_request.md
.github/workflows/: automatic_submodule_update.yaml  release-pre.yml  release.yml  run_tests.yml  sync-to-proxy-repo.yaml  sync-to-readthedocs-repo.yaml  sync-to-readthedocs.yaml  sync.yaml  test_daily_latest_submodule.yaml  test_develop_cli.yaml  test_latest_submodule.yaml  test_pr_latest_submodule.yaml  update_coverage.yml
data/: coupler.gds  web_test_tmp  web_test_tmp.json
data_server/: sim.json  simulation.json  task_101_monitor_plane.npy  task_101_monitor_point.npy
data_user/: simulation.json  task_101_monitor_plane.npy  task_101_monitor_point.npy
docs/: 404.rst  CNAME  Makefile  README.md  README.rst  StartHere.py  api.rst  api_automodule.rst  api_autosummary.rst  build_docs.sh  changelog.rst  conf.py  conf_old.py  develop.rst  draw_package.py  examples.rst  faq.rst  generate_doc.py  howdoi.rst  index.rst  install.rst  make.bat  material_library.md  quickstart.rst  requirements.txt  schema.json
docs/_autosummary/: __init__.rst  chunk.rst  copy.rst  grid.rst  json.rst  log.rst  tidy3d.Absorber.rst  tidy3d.AbsorberParams.rst  tidy3d.AnisotropicMedium.rst  tidy3d.ApodizationSpec.rst  tidy3d.AstigmaticGaussianBeam.rst  tidy3d.AutoGrid.rst  tidy3d.BlochBoundary.rst  tidy3d.Boundary.rst  tidy3d.BoundaryEdge.rst  tidy3d.BoundarySpec.rst  tidy3d.Box.rst  tidy3d.C_0.rst  tidy3d.Coords.rst  (+163 more)
exploratory/: demo_pydantic.py  demo_xarray.py  load_xarray.py  numpy_pydantic.py  test_IO_dataclass.py  test_IO_pydantic.py  test_viz.py  tidy3d_all_together.py  viz_plotly.py  web.py
explore/: Dataclasses.ipynb  Inf.ipynb  Inside.ipynb  Polygon_Intersect.ipynb  Progressbar.ipynb  Shapely.ipynb  Untitled.ipynb  container.py  load_xarray.py  monitor_interp.py  pbar2.py  pbars.py  task.py  type_annotations.py  webapi.py
metadata/: description_length_checker.py  metadata.txt  title_length_checker.py  update_notebook_metadata.py
misc/: Cr_Sytchkova.csv  Focusing_GC.gds  MoS2_nk.csv  coupler.gds  dc_export_gds.gds  gds_export_dc.gds  gds_export_ring.gds  gds_export_ring_bus.gds  import_file_mapping.json  inv_des_light_extractor.gds  inv_des_mode_conv.gds  inv_des_taper.gds  inv_des_wdm.gds  inv_des_ybranch.gds  inverse_des_wg_bend.gds  inverse_designed_gc.gds  mat_Al2O3.csv  mie_plasmonic_flux_abs.txt  my_medium.json  nk_data.csv  optimized_reflector.gds  optimized_sbend.gds  prefab_base_sim.hdf5  prefab_gc.gds  y_branch_fab.pkl
notebooks/: DataViz.ipynb  Dispersion.ipynb  Fitting.ipynb  GDS_import.ipynb  GeoViz3D.ipynb  GratingCoupler.ipynb  H5py.ipynb  HighQ_Ge.ipynb  HighQ_Si.ipynb  L3_cavity.ipynb  Metalens.ipynb  Modal_sources_monitors.ipynb  ModeSolver.ipynb  Near2Far.ipynb  Near2Far_ZonePlate.ipynb  ParameterScan.ipynb  Quickstart.ipynb  README.md  RingResonator.ipynb  Simulation.ipynb  StartHere.ipynb  TestNotebook1.ipynb  Viz3D.ipynb  VizData.ipynb  VizSimulation.ipynb  WebAPI.ipynb  monitor_data.hdf5  requirements.txt  simulation_data.hdf5
playground/: mode_converter.ipynb  mode_converter.py
requirements/: basic.txt  common.txt  core.txt  dev.txt  gdstk.txt  jax.txt  plotly.txt  plugins.txt  stl.txt  surfacemesh.txt  trimesh.txt  vtk.txt  web.txt
scripts/: benchmark_import.py  development.sh  make_script.py  pre_release.sh  sample.py  schema.py  test_local.sh  update_latest_submodules.sh  update_submodules.sh
tests/: README.md  Simulation.json  VizData.ipynb  _test_data_performance.py  _test_fit_web.py  _test_heat.ipynb  _test_warning_info.py  _test_web.py  _test_webapi.py  conftest.py  full_test_notebooks.py  mode_solver.json  requirements.txt  ruff.toml  test_IO.py  test_IO_dataclass.py  test_IO_pydantic.py  test_boundaries.py  test_cache.py  test_component_modeler.py  test_components.py  test_components.py.orig  test_config.py  test_construct.py  test_core.py  test_custom_components.py  test_custom_source.py  test_data.py  test_data_arrays.py  test_data_batch.py  test_data_monitor.py  test_data_sim.py  test_dataset.py  test_geo_group.py  test_grid.py  test_log.py  test_main.py  test_make_script.py  test_material_library.py  test_meshgenerate.py  (+13 more)
tidy3d/: README.md  __init__.py  __main__.py  config.py  config_extra.py  constants.py  convert.py  exceptions.py  frequencies.py  log.py  material_library.py  material_library_docs.py  packaging.py  schema.json  static.py  test_pydantic_class.py  tidy3d.py  updater.py  version.py  viz.py  web.py
tidy3d_client/: material_library.py  web.py
tidy3d_core/: __init__.py  convert.py  data.py  package_data.py  postprocess.py  preprocess.py  schema.json  schema.py  schema_ops.py  solver.py  tidy3d_core.py
tmp_demos/: LoadData.ipynb  VO2-Povinelli_metal.csv  cladding-material.csv  fit.py  fit_api.py  fit_improve.py  n_data.csv  nk_data.csv  poles.txt  poles_VO2-Povinelli_metal..txt  poles_cladding-material..txt  poles_n_data..txt  poles_waveguide-material..txt  waveguide-material.csv
(+1237 files in other folders)
